docs: update the root README
Corrects the documented capabilities (the vectorized batch API and the
writer are implemented; the writer emits the 2.0 page format by default
and the 1.1 format on request), fixes stale import paths in the
examples, and leads with the streaming, bounded-memory, cloud-native
positioning.

on-behalf-of: @multiversio <info@multivers.io>